# my-code-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  knowledge.md
.github/workflows/: release.yml
scripts/: analyze_review_history.py
src/: context.rs  lib.rs  main.rs  preamble.rs  streaming.rs  token_usage.rs  ui.rs
src/app/: conversion.rs  event_handler.rs  lifecycle.rs  mod.rs  terminal.rs  ui.rs
src/app/bootstrap/: knowledge.rs  mod.rs
src/app/commands/: clear.rs  compact.rs  connect.rs  help.rs  init.rs  load.rs  mod.rs  model.rs  plan.rs  quit.rs  review.rs  save.rs  shell.rs  status.rs  think.rs  tokens.rs  undo.rs
src/app/event_handler/: command.rs  init.rs  key_event.rs  message.rs  mod.rs  (+5 more)
src/core/: client.rs  config.rs  connection.rs  context.rs  context_cache.rs  context_manager.rs  file_cache.rs  init.rs  knowledge.rs  mod.rs  parser.rs  paths.rs  plan_tracker.rs  preamble.rs  session.rs  streaming.rs  token_usage.rs  tool.rs  types.rs
src/mcp/: client.rs  mod.rs  types.rs  web_search_tool.rs
src/tools/: code_review.rs  code_search.rs  confirmation.rs  file_delete.rs  file_outline.rs  file_read.rs  file_undo.rs  file_update.rs  file_write.rs  git_commit.rs  git_diff.rs  git_log.rs  git_status.rs  glob.rs  list_dir.rs  mod.rs  safety.rs  shell_exec.rs  undo_history.rs
src/ui/: chat.rs  input.rs  markdown.rs  mod.rs  render.rs  status.rs  terminal.rs  ui.rs
tests/: agent.rs  code_search.rs  config.rs  config_ctx.rs  context.rs  context_cache.rs  context_manager.rs  core.rs  file_cache.rs  file_delete.rs  file_ops.rs  file_read.rs  file_undo.rs  file_update.rs  file_write.rs  glob.rs  list_dir.rs  markdown.rs  mcp.rs  message_queue.rs  parser.rs  plan_display.rs  plan_tracker.rs  preamble.rs  render.rs  review_agent.rs  search.rs  session.rs  shell_exec.rs  shell_mode.rs  streaming.rs  streaming_todos.rs  test_multi_language_parser.rs  token_usage.rs  tool_dedup.rs  tools.rs  write_todos.rs
tests/agent/: review_agent.rs  streaming_newlines.rs
tests/config_ctx/: context.rs
tests/core/: markdown.rs  mcp.rs  message_queue.rs  preamble.rs  safety.rs  session.rs  token_usage.rs
tests/file_ops/: undo.rs  write.rs
tests/search/: code_search.rs  glob.rs  list_dir.rs
tests/tools/: shell_exec.rs  tool_dedup.rs
(+93 files in other folders)
