[package]
name = "my-code-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.35"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal"] }
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"
async-process = "2"  # For spawning MCP server processes
async-trait = "0.1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
glob = "0.3.3"
toml = "1.1.2"
ratatui = "0.28"
tui-textarea = "0.6"
tui-markdown = "0.2"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

