[package]
name = "my-code-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
anyhow = "1"
async-process = "2"  # For spawning MCP server processes
async-trait = "0.1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
glob = "0.3.3"
toml = "1.1.2"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10" }
tracing = "0.1"
unicode-width = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-python = "0.21"

[dev-dependencies]
tempfile = "3"

